--- a/Introduction/.classpath
+++ b/Introduction/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path=".settings"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="src/simon/lib/gui.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
